sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:12: error: not found: value fetHoleBase
      else if (fetHoleBase()-1==2){
               ^